<resources>
    <string name="app_name">Quartz Master</string>
    <string name="title_list">Tiles</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_map">Map</string>
    <string name="title_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tile">TileActivity</string>
    <string name="first">Quartz Master® is headquartered in Bayonne, New Jersey with warehouses throughout the US and Canada. We are an established, Quartz Manufacturing Company, which sells to Distributors and Fabricators. Our Quartz Slabs are much larger than industry standards at 120” x 64”. Our material is composed of 93% natural quartz and 7% resin which makes it the hardest and most durable, non-precious stone, on the market today. As one of the largest suppliers of Quartz stone, we also sell the highest quality marble, granite, mosaics and engineered marble.</string>
    <string name="second"><![CDATA[We uniquely provide our clients with the sturdiest surface material, by combining the hardness and durability of quartz with the exceptional low maintenance qualities of man-made materials. There is a wide selection to choose from, comprised of over 60 exquisite colours and patterns. Quartz Master is the ideal choice for all of one’s designing needs including: kitchen/laundry/bath countertops vanity tops, backsplashes, wet bars, tub decks, tub/shower surrounds, wall cladding & furniture. It is all these qualities which make us the preferred manufacturer of low maintenance, durable and extraordinarily strong quartz which is both stain and contamination resistant. For one of the world’s top experts of quartz surfaces, look no further than Quartz Master LLC®.]]></string>
    <string name="nsf_text">Quartz Master’s surface materials are deemed safe to use for direct contact with all food types. Our surfaces are nonporous which helps prevent the growth of surface mold and bacteria.</string>
    <string name="greenguard_text">Quartz Master is Greenguard Gold certified; this is among the world’s highest standards for improved indoor air quality.</string>
    <string name="usgbc_text">USGBC developed Leadership in Energy and Environmental Design (LEED), an third-party certification program and a US nationally accepted benchmark for the design, construction and operation of high performance green buildings.</string>
    <string name="kosher_text">Our countertops may be koshered for Passover and may be koshered from Diary to Meat (or vice versa).</string>
    <string name="preferences_key">Quartz Master</string>
    <string name="search_title">Search</string>
    <string name="desc">Quartz Master is a quartz surfaces manufacturer, headquartered in Bayonne, New Jersey. The company produces the highest quality and largest quartz slabs in the industry. It distributes through many select locations in US and Montreal, Quebec, Canada, and is now expanding in California. The demand for Quartz Master’s Marble Collection prompted the company to open its first distribution center in California. In June 2016, Quartz Master opened its new 6500 square foot warehouse in Los Angeles to serve Los Angeles County. But within a couple of months, the distribution center was making deliveries to fabricators from as far south as San Diego to as far north as San Francisco. When it opened, the warehouse was stocked with a modest number of slabs, but within weeks it had to be restocked to meet demands. It now has millions in inventory. On January 2nd, they opened an office in San Diego, and on February 1st, an additional warehouse was opened in San Francisco on Mariposa Avenue in Mountain View. Quartz Master is recognized for its Marble Collection. In 2011, after 12 months of laborious engineering, Quartz Master introduced the world’s first marble design to Quartz. And in 2014, they perfected the art of book matching. Today, most of their marble designs are book matched. Homeowners and interior designers appreciate the low maintenance, durability and unmatched stain resistance of quartz. And they love that they can design a kitchen that has the beauty of natural stone without the expense and hassle.</string>
</resources>
