<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.aayush.quartzmaster.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/aboutbanner" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="Quartz Master"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:lineSpacingExtra="6sp"
            android:text="@string/first"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="217dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/qualitystone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="With all these qualities in mind"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="19dp"
            android:fontFamily="sans-serif-light"
            android:lineSpacingExtra="6sp"
            android:text="@string/second"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="217dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/qualitystone1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="Certifications"
            android:textColor="@color/colorAccent"
            android:textSize="24dp" />

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/certified2020" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#f3f3f3"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="217dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/nsfmaterial" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/nsfc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="NSF"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/nsf_text"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:lineSpacingExtra="8sp"
                    android:textSize="16dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#f3f3f3"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="217dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/greenguardmaterial" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/greenguardc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Greenguard"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/greenguard_text"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:lineSpacingExtra="8sp"
                    android:textSize="16dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#f3f3f3"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="217dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/usgbcmaterial" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/green_grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="USGBC"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/usgbc_text"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:lineSpacingExtra="8sp"
                    android:textSize="16dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#f3f3f3"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="217dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/koshermaterial" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/kol_simcha" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Kosher Certified"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/kosher_text"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:lineSpacingExtra="8sp"
                    android:textSize="16dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>
